# num-units

./: .gitmodules  CLAUDE.md  Cargo.toml  README.md
docs/: adding-quantities.md
examples/: angle_scalar_demo.rs  dimension_inference.rs  functions.rs  simple_new_get_demo.rs  unit_system_demo.rs
nom-macros/: Cargo.toml
num-units-macros/: Cargo.toml
num-units-macros/src/: lib.rs
src/: base_units.rs  conversions.rs  dimension.rs  lib.rs  prefix.rs  quantity.rs  scale.rs  system.rs  unit.rs  uom_comparison.rs
src/isq/: acceleration.rs  amount.rs  angle.rs  apple.rs  area.rs  current.rs  energy.rs  force.rs  information.rs  length.rs  luminosity.rs  mass.rs  mod.rs  power.rs  ratio.rs  scalar.rs  temperature.rs  time.rs  velocity.rs  volume.rs
src/quantity/: .gitignore  add.rs  const_one.rs  const_zero.rs  div.rs  float.rs  float_const.rs  mod.rs  mul.rs  mul_add.rs  mul_add_assign.rs  one.rs  pow.rs  rem.rs  signed.rs  sub.rs  zero.rs
src/si/: acceleration.rs  amount.rs  angle.rs  area.rs  current.rs  energy.rs  force.rs  information.rs  length.rs  luminosity.rs  mass.rs  mod.rs  power.rs  ratio.rs  scalar.rs  temperature.rs  time.rs  velocity.rs  volume.rs
tests/: angle_scalar.rs  dimension_inference.rs  functions.rs  generic_api.rs  uom_comparison.rs
